# api-tester-poc

./: .gitignore  Cargo.toml
.github/workflows/: release.yaml
examples/cases/: result.json
examples/cases/get/: expected.json  input.json  output.json
examples/cases/get_error/: expected.json  input.json  output.json
examples/cases/post/: expected.json  input.json  output.json
src/: main.rs
