[package]
name = "api-tester"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest ={version = "0.11",features = ["json"]}
serde = {version = "1.0",features = ["derive"]}
serde_json = "1.0"
clap = { version = "4.5.4", features = ["derive"] }
serde_json_diff = "0.2.0"
